`Fixed AddBlog component error message and updated BlogSinglePage component to use Link component and fixed image height on small screens.`

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -140,6 +140,12 @@
     }
 }
 
+@media (max-width:750px) {
+    .blog-image{
+        height: auto !important;
+    }
+}
+
 
 
 /* Basic styling for the modal */
